fix graph flickering

--- a/public/assets/css/dattss.css
+++ b/public/assets/css/dattss.css
@@ -586,7 +586,7 @@ textarea:focus {
 
 .dattss-graph {
   margin-bottom: 10px;
-  min-height: 150px;
+  min-height: 190px;
 }
 
 .dattss-graph .title {
